--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,26 @@
-def VERSION_NAME = "0.2.1"
+def VERSION_NAME = "0.3.0"
 
 buildscript {
     repositories {
+        mavenLocal()
         google()
         mavenCentral()
-        jcenter()
     }
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10'
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'java-gradle-plugin'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
-apply plugin: 'com.github.johnrengelman.shadow'
+
+sourceCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
 
 ext {
     pom = [
@@ -28,7 +31,8 @@ ext {
             siteUrl           : 'https://shopify.github.io/syrup',
             gitUrl            : 'https://github.com/Shopify/syrup-gradle.git',
             licenseName       : 'The MIT License',
-            licenseUrl        : 'https://opensource.org/licenses/MIT'
+            licenseUrl        : 'https://opensource.org/licenses/MIT',
+            author            : 'Shopify Inc.'
     ]
 }
 
@@ -37,13 +41,14 @@ archivesBaseName = pom.artifact
 version VERSION_NAME
 
 repositories {
+    mavenLocal()
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation "org.yaml:snakeyaml:1.24"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
+    implementation 'org.yaml:snakeyaml:1.29'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
 }
 
 gradlePlugin {
@@ -55,77 +60,65 @@ gradlePlugin {
     }
 }
 
-shadowJar {
-    archiveClassifier = null
-    minimize()
-}
-
-task publishBinary(type: Copy) {
-    dependsOn shadowJar
-    from('./build/libs') {
-        include "*.jar"
-    }
-    into 'lib'
-}
-
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from sourceSets.main.allSource
 }
 
 artifacts {
-    archives shadowJar, javadocJar, sourcesJar
+    archives javadocJar, sourcesJar
 }
 
 signing {
-    required { gradle.taskGraph.hasTask("uploadArchives") }
+    required { gradle.taskGraph.hasTask("publishPluginMavenPublicationToMavenRepository") }
     def signingKeyId = findProperty("signingKeyId")
     def signingKey = findProperty("signingKey")
     def signingPassword = findProperty("signingPassword")
     useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
-    sign configurations.archives
+    sign publishing.publications
 }
 
-uploadArchives {
+publishing {
     repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+        maven {
+            def release = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshot = "https://oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshot : release
 
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: System.getenv("OSSRH_USERNAME"), password: System.getenv("OSSRH_PASSWORD"))
+            credentials {
+                username System.getenv("OSSRH_USERNAME")
+                password System.getenv("OSSRH_PASSWORD")
             }
+        }
+    }
 
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: System.getenv("OSSRH_USERNAME"), password: System.getenv("OSSRH_PASSWORD"))
-            }
+    afterEvaluate {
+        publications {
+            pluginMaven {
+                artifact javadocJar
+                artifact sourcesJar
 
-            pom {
-                project {
-                    groupId project.ext.pom.publishedGroupId
-                    artifactId project.ext.pom.artifact
-
-                    name project.ext.pom.libraryName
-                    description project.ext.pom.libraryDescription
-                    url project.ext.pom.siteUrl
-
-                    developers {
-                        developer {
-                            name 'Shopify Inc.'
-                        }
-                    }
+                pom {
+                    name = project.ext.pom.libraryName
+                    description = project.ext.pom.libraryDescription
+                    url = project.ext.pom.siteUrl
 
                     licenses {
                         license {
-                        name project.ext.pom.licenseName
-                        url project.ext.pom.licenseUrl
+                            name = project.ext.pom.licenseName
+                            url = project.ext.pom.licenseUrl
                         }
                     }
-
+                    developers {
+                        developer {
+                            name = project.ext.pom.author
+                        }
+                    }
                     scm {
                         connection = project.ext.pom.gitUrl
                         developerConnection = project.ext.pom.gitUrl
